<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/viewNumTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/num_tasks_initial"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonViewTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/light_grey"
            android:paddingStart="100dp"
            android:paddingLeft="100dp"
            android:paddingEnd="100dp"
            android:paddingRight="100dp"
            android:text="@string/view_tasks"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewNumTasks" />

        <Button
            android:id="@+id/buttonCreateTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_task"
            android:paddingStart="95dp"
            android:paddingLeft="95dp"
            android:paddingEnd="95dp"
            android:paddingRight="95dp"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonViewTasks" />

        <FrameLayout
            android:layout_width="346dp"
            android:layout_height="98dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonViewTasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewNumTasks"
            app:layout_constraintVertical_bias="0.185">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/upcoming_tasks"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/upcomingTaskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp" />

            <TextView
                android:id="@+id/upcomingTaskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp" />

            <TextView
                android:id="@+id/upcomingTaskPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="60dp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>